// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.tape;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/tape";

// TapeService provides functions to store and retrieve accounts that were retrieved from TAPE.
service TapeService {
  // Saves credentials about a generic account to a location on the DUT.
  rpc SaveGenericAccountInfoToFile(SaveGenericAccountInfoToFileRequest) returns (google.protobuf.Empty) {}

  // Removes credentials about a generic account from a location on the DUT.
  rpc RemoveGenericAccountInfo(RemoveGenericAccountInfoRequest) returns (google.protobuf.Empty) {}
}

// SaveGenericAccountInfoToFileRequest stores request parameters to save a generic account to a DUT.
message SaveGenericAccountInfoToFileRequest {
  // The location that the variables should be written to on the DUT.
  string path = 1;
  // The username of the leased account.
  string username = 2;
}

// RemoveGenericAccountInfoRequest stores request parameters required to remove generic account information from a DUT.
message RemoveGenericAccountInfoRequest {
  // The location that the saved variables are stored at on the DUT.
  string path = 1;
}
